Use relative urls in the templates.

--- a/assets/templates/error.html
+++ b/assets/templates/error.html
@@ -20,17 +20,16 @@
     }
 </style>
 <div class="w-full mx-auto sm:max-w-3xl lg:max-w-5xl xl:max-w-6xl px-5">
-    {{$siteUrl := .SiteUrl}}
 
 
     <!-- Error Heading -->
     <div class="narrow-width mx-auto flex flex-col items-center space-y-4 py-5">
-        <h1 class="font-black text-8xl text-pink-600">{{.AppError}}</h1>
+        <h1 class="font-black text-center text-8xl text-pink-600">{{.AppError}}</h1>
 
         {{if eq .AppError "404"}}
-            <h2 class="font-bold text-2xl text-slate-700">Oops! We couldn't find the page you are looking for.</h2>
+            <h2 class="font-bold text-center text-2xl text-slate-700">Oops! We couldn't find the page you are looking for.</h2>
             <div class="flex flex-col leading-relaxed  text-base text-slate-700">
-                <p>The page you are looking for either does not exist or has been moved. Please check the URL again to ensure that you are visiting the correct page. Alternatively, you can go back to the <a class="font-medium underline" href="{{$siteUrl}}">home page</a> to check out some of our featured items and latest posts.</p>
+                <p>The page you are looking for either does not exist or has been moved. Please check the URL again to ensure that you are visiting the correct page. Alternatively, you can go back to the <a class="font-medium underline" href="{{.SiteUrl}}">home page</a> to check out some of our featured items and latest posts.</p>
             </div>
         {{else if eq .AppError "500"}}
             <h2 class="font-bold text-2xl text-slate-700">Oops! Something unexpected happened.</h2>
@@ -45,10 +44,9 @@
     {{end}}
 
 
-    <!-- Latest Articles -->
     {{if .LatestPosts}}
+        <!-- Latest Articles -->
         <hr class="my-12">
-        <h2 class="font-bold text-4xl text-slate-800 underline decoration-indigo-600 leading-relaxed mb-7">Latest Posts</h2>
         {{template "post-grid" .LatestPosts}}
     {{end}}
 
