--- a/assets/templates/z-footer.html
+++ b/assets/templates/z-footer.html
@@ -3,9 +3,8 @@
     <div class="flex flex-col justify-center items-center space-y-6 text-slate-500">
 
         <nav class="flex flex-wrap justify-center space-x-7">
-            {{$siteUrl := .SiteUrl}}
             {{range .FooterLinks}}
-                <p class="py-1 pb-1.5 hover:underline"><a href="{{$siteUrl}}{{.Route}}">{{.Text}}</a></p>
+                <p class="py-1 pb-1.5 hover:underline"><a href="{{.Route}}">{{.Text}}</a></p>
             {{end}}
         </nav>
 
