--- a/assets/templates/z-posts.html
+++ b/assets/templates/z-posts.html
@@ -1,5 +1,5 @@
 {{define "post-grid"}}
-    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-x-8 gap-y-12 mb-20">
+    <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-x-8 gap-y-12 mb-20">
         {{range .}}
             <div>
                 <a class="flex flex-col space-y-2.5" href="/{{.Slug}}">
