--- a/assets/templates/index.html
+++ b/assets/templates/index.html
@@ -5,10 +5,10 @@
     {{range .Sections}}
         <div class="flex items-center justify-between mb-7">
             {{if .Category.IsEmpty}}
-                <h2 class="font-bold text-3xl text-slate-800 underline decoration-indigo-600 leading-relaxed">Latest Posts</h2>
+                <h2 class="decorate-primary underline font-bold text-3xl text-slate-800 leading-relaxed">Latest Posts</h2>
             {{else}}
-                <h2 class="font-bold text-3xl text-slate-800 underline decoration-indigo-600 leading-relaxed">{{.Category.Title}}</h2>
-                <p class="text-sm text-slate-500">See all in <a class="text-blue-600 underline" href="{{.Category.Route}}">{{.Category.Title}} &raquo;</a></p>
+                <h2 class="decorate-primary underline font-bold text-3xl text-slate-800 leading-relaxed">{{.Category.Title}}</h2>
+                <p class="text-slate-500">See all in <a class="link underline" href="{{.Category.Route}}">{{.Category.Title}} &raquo;</a></p>
             {{end}}
         </div>
         {{template "post-grid" .Posts}}
