--- a/assets/templates/z-head.html
+++ b/assets/templates/z-head.html
@@ -7,6 +7,7 @@
 
     {{if .AppDebug}}
         <script src="https://cdn.tailwindcss.com"></script>
+        <!-- <meta http-equiv="refresh" content="1"> -->
     {{else}}
         <link rel="stylesheet" href="/styles.css">
     {{end}}
@@ -48,4 +49,89 @@
         <meta property="twitter:card" content="summary_large_image"/>
     {{end}}
 </head>
+<style>
+    :root{
+        --nc-font-sans: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+        --nc-font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+
+        --nc-tx-1:#000000; /* black */
+        --nc-tx-3:#1e293b; /* slate-800 */
+        --nc-bg-2:#f8fafc; /* slate-50 */
+        --nc-bg-3:#e2e8f0; /* slate-200 */
+        --nc-ac-2:#FEF9C3; /* yellow-100 */
+        --nc-cc-1:#082f49; /* sky-950 */
+
+        --link-color: {{.Theme.Link}};
+        --link-color-hov: {{.Theme.Link}};
+        --primary-color: {{.Theme.Primary}};
+        --secondary-color: {{.Theme.Secondary}};
+
+        --font-size: 1.2rem;
+        --font-size-sm: 1.15rem;
+
+        --line-height-sm: 2rem;
+        --line-height: 2.1rem;
+
+        --margin-size: 1.8rem;
+    }
+    .a26 {color:var(--nc-tx-3);font-size:var(--font-size-sm);line-height:var(--line-height-sm);margin:0 auto;border-radius:6px;overflow-x:hidden;word-break:break-word;overflow-wrap:break-word}
+    .a26 :last-child{padding-bottom:0;margin-bottom:0}
+    .a26 address, .a26 area, .a26 article, .a26 aside, .a26 audio, .a26 blockquote, .a26 datalist, .a26 details, .a26 dl, .a26 fieldset, .a26 figure, .a26 form, .a26 iframe, .a26 img, .a26 input, .a26 meter, .a26 nav, .a26 ol, .a26 optgroup, .a26 option, .a26 output, .a26 p, .a26 pre, .a26 progress, .a26 ruby, .a26 section, .a26 table, .a26 textarea, .a26 ul, .a26 video{margin-bottom:var(--margin-size)}
+    .a26 a{color:var(--link-color);text-decoration:none}
+    .a26 a:hover{color:var(--link-color-hov);text-decoration:underline}
+    .a26 abbr:hover{cursor:help}
+    .a26 blockquote{padding:1.5rem;background:var(--nc-bg-2);border-left:5px solid var(--nc-bg-3)}
+    .a26 blockquote :last-child{padding-bottom:0;margin-bottom:0}
+    .a26 abbr{cursor:help}
+    .a26 p > code {opacity: 94%}
+    .a26 a code{color: inherit !important;background:none;padding:0 1px}
+    .a26 code, .a26 kbd, .a26 pre, .a26 samp{font-family:var(--nc-font-mono);background:var(--nc-bg-2);color:var(--nc-cc-1);padding:3px 4px;font-size:1rem;border-radius:3px}
+    .a26 kbd{border-bottom:3px solid var(--nc-bg-3)}
+    .a26 pre{padding:1rem 1.4rem;max-width:100%;overflow:auto;line-height:1.7rem;border-radius:4px}
+    .a26 pre code{background:inherit;color:inherit;border:0;padding:0;margin:0;font-size:0.945rem;line-height:1.7rem}
+    .a26 code pre{display:inline;background:inherit;font-size:inherit;color:inherit;border:0;padding:0;margin:0}
+    .a26 details{padding:1.1rem 1rem;background:var(--nc-bg-2);border:1px solid var(--nc-bg-3);border-radius:4px;font-size:1.08rem}
+    .a26 details a{text-decoration:none}
+    .a26 summary{cursor:pointer;font-weight:700;font-size:1.15rem}
+    .a26 details[open]>:last-child{margin-bottom:0}
+    .a26 dt{font-weight:700}
+    .a26 dd::before{content:'→ '}
+    .a26 hr{border:0;border-bottom:1px solid var(--nc-bg-3);margin:1rem auto}
+    .a26 fieldset{margin-top:1rem;padding:2rem;border:1px solid var(--nc-bg-3);border-radius:4px}
+    .a26 legend{padding:auto .5rem}
+    .a26 table{border-collapse:collapse;width:100%}
+    .a26 td, .a26 th{border:1px solid var(--nc-bg-3);text-align:left;padding:.5rem}
+    .a26 th{background:var(--nc-bg-2)}
+    .a26 tr:nth-child(even){background:var(--nc-bg-2)}
+    .a26 table caption{font-weight:700;margin-bottom:.5rem}
+    .a26 textarea{max-width:100%}
+    .a26 ol, .a26 ul{padding-left:2rem}
+    .a26 li{margin-top:.4rem}
+    .a26 ol ol, .a26 ol ul, .a26 ul ol, .a26 ul ul{margin-bottom:0}
+    .a26 ul {list-style-type:square}
+    .a26 ul > li > ul {list-style-type:circle}
+    .a26 ul > li > ul > li > ul {list-style-type:square}
+    .a26 mark{padding:3px 6px;background:var(--nc-ac-2);color:var(--nc-tx-1)}
+    .a26 input, .a26 select, .a26 textarea{padding:9px 12px;margin-bottom:.5rem;background:var(--nc-bg-2);color:var(--nc-tx-3);border:1px solid var(--nc-bg-3);border-radius:4px;box-shadow:none;box-sizing:border-box;font-size:1.125rem}
+    .a26 img{max-width:100%;height:auto;width:auto;border-radius:4px}
+    .a26 h1{line-height:1;color:var(--nc-tx-1);margin-bottom:var(--margin-size);font-weight:700;letter-spacing:0.2px;font-size:2rem}
+    .a26 h2{line-height:1;color:var(--secondary-color);margin-bottom:var(--margin-size);font-weight:700;letter-spacing:0.2px;padding-top:1.5rem;margin-bottom:1.4rem;font-size:1.85rem}
+    .a26 h3{line-height:1;color:var(--secondary-color);margin-bottom:var(--margin-size);font-weight:700;letter-spacing:0.2px;padding-top:1.5rem;margin-bottom:1.4rem;font-size:1.55rem}
+    .a26 h4{line-height:1;color:var(--secondary-color);margin-bottom:var(--margin-size);font-weight:700;letter-spacing:0.2px;padding-top:1.5rem;margin-bottom:1.4rem;font-size:1.25rem}
+    .a26 h5{line-height:1;color:var(--secondary-color);margin-bottom:var(--margin-size);font-weight:700;letter-spacing:0.2px;padding-top:1.5rem;margin-bottom:1.4rem;font-size:1rem}
+    .a26 h6{line-height:1;color:var(--secondary-color);margin-bottom:var(--margin-size);font-weight:700;letter-spacing:0.2px;padding-top:1.5rem;margin-bottom:1.4rem;font-size:.875rem}
+
+
+    .primary{color:var(--primary-color)}
+    .secondary{color:var(--secondary-color)}
+    .decorate-primary{-webkit-text-decoration-color:var(--primary-color);text-decoration-color:var(--primary-color)}
+    a.link{color:var(--link-color)}
+    a.link:hover{color:var(--link-color);text-decoration:underline}
+
+
+    .main-section{width:100%;margin-left:auto;margin-right:auto}
+    @media (min-width: 768px)  {.main-section {-ms-flex:0 0 94%;flex:0 0 94%;max-width:94%}}
+    @media (min-width: 1024px) {.main-section {-ms-flex:0 0 72%;flex:0 0 72%;max-width:72%}}
+    @media (min-width: 1280px) {.main-section {-ms-flex:0 0 66%;flex:0 0 66%;max-width:66%}}
+</style>
 {{end}}
