--- a/assets/templates/z-footer.html
+++ b/assets/templates/z-footer.html
@@ -2,11 +2,13 @@
 <footer class="w-full mx-auto sm:max-w-3xl lg:max-w-5xl xl:max-w-6xl px-5     mt-24 py-8 border-t border-slate-200">
     <div class="flex flex-col justify-center items-center space-y-6 text-slate-500">
 
-        <nav class="flex flex-wrap justify-center space-x-7">
-            {{range .FooterLinks}}
-                <p class="py-1 pb-1.5 hover:underline"><a href="{{.Route}}">{{.Text}}</a></p>
-            {{end}}
-        </nav>
+        {{if .FooterLinks}}
+            <nav class="flex flex-wrap justify-center space-x-7">
+                {{range .FooterLinks}}
+                    <p class="py-1 pb-1.5 hover:underline"><a href="{{.Route}}">{{.Text}}</a></p>
+                {{end}}
+            </nav>
+        {{end}}
 
         <p>Copyright &copy; {{.Copyright}} All Rights Reserved</p>
     </div>
