Add a blue theme. Increase the font size of the posts block and the sitemap titles.

--- a/assets/templates/sitemap.html
+++ b/assets/templates/sitemap.html
@@ -10,7 +10,7 @@
             <div class="w-full flex items-center justify-between border-b border-slate-100">
 
                 <p class="w-9/12">
-                    <a class="link font-medium" href="{{.Route}}">{{.Heading}}</a>
+                    <a style="font-size: 1.0625rem;" class="link font-medium" href="{{.Route}}">{{.Heading}}</a>
                 </p>
 
                 <p class="w-3/12 flex justify-end text-slate-400">
