--- a/assets/templates/z-posts.html
+++ b/assets/templates/z-posts.html
@@ -6,7 +6,7 @@
                     <img class="rounded drop-shadow" width="{{.Image.Width}}" height="{{.Image.Height}}" src="{{.Image.Url}}" alt="{{.Image.Alt}}">
                     <p class="text-lg leading-snug text-black font-semibold pt-2">{{.Heading}}</p>
                 </a>
-                <p class="text-sm leading-relaxed text-slate-700 mt-2">{{.Description}}</p>
+                <p style="font-size: 0.9375rem;" class="leading-relaxed text-slate-700 mt-2">{{.Description}}</p>
             </div>
         {{end}}
     </div>
