--- a/assets/templates/z-footer.html
+++ b/assets/templates/z-footer.html
@@ -3,9 +3,9 @@
     <div class="flex flex-col justify-center items-center space-y-6 text-slate-500">
 
         {{if .FooterLinks}}
-            <nav class="flex flex-wrap justify-center space-x-7">
+            <nav class="flex flex-wrap justify-center pb-1">
                 {{range .FooterLinks}}
-                    <p class="py-1 pb-1.5 hover:underline"><a href="{{.Route}}">{{.Text}}</a></p>
+                    <p class="px-3.5 py-1 hover:underline"><a href="{{.Route}}">{{.Text}}</a></p>
                 {{end}}
             </nav>
         {{end}}
