--- a/assets/templates/z-navbar.html
+++ b/assets/templates/z-navbar.html
@@ -3,7 +3,7 @@
     <div class="flex flex-col justify-center items-center space-y-3 pb-4 border-b border-slate-200">
 
         <h3 class="primary font-bold text-2xl">
-            <a href="{{.SiteUrl}}">{{.SiteName}}</a>
+            <a href="/">{{.SiteName}}</a>
         </h3>
 
         {{if .NavbarLinks}}
