--- a/assets/templates/z-head.html
+++ b/assets/templates/z-head.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/x-icon" href="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAENJREFUOE9jFBDTrvvP9L+a4T8DGwMpgJHhF+M/xlZGfgmtnyRrhlkEMoRfXOs/KRajqx01gIFhNAyGSRhQmpkozc4Aa4Aj960gEOkAAAAASUVORK5CYII="/>
+    <link rel="icon" type="image/x-icon" href="/media/favicon.png">
 
     {{if .AppDebug}}
         <script src="https://cdn.tailwindcss.com"></script>
@@ -85,7 +85,7 @@
     .a26 abbr{cursor:help}
     .a26 p > code {opacity: 94%}
     .a26 a code{color: inherit !important;background:none;padding:0 1px}
-    .a26 code, .a26 kbd, .a26 pre, .a26 samp{font-family:var(--nc-font-mono);background:var(--nc-bg-2);color:var(--nc-cc-1);padding:3px 4px;font-size:1rem;border-radius:3px}
+    .a26 code, .a26 kbd, .a26 pre, .a26 samp{font-family:var(--nc-font-mono);background:var(--nc-bg-2);color:var(--nc-cc-1);padding:3px 4px;font-size:1.08rem;border-radius:3px}
     .a26 kbd{border-bottom:3px solid var(--nc-bg-3)}
     .a26 pre{padding:1rem 1.4rem;max-width:100%;overflow:auto;line-height:1.7rem;border-radius:4px}
     .a26 pre code{background:inherit;color:inherit;border:0;padding:0;margin:0;font-size:0.945rem;line-height:1.7rem}
@@ -133,5 +133,7 @@
     @media (min-width: 768px)  {.main-section {-ms-flex:0 0 96%;flex:0 0 96%;max-width:96%}}
     @media (min-width: 1024px) {.main-section {-ms-flex:0 0 72%;flex:0 0 72%;max-width:72%}}
     @media (min-width: 1280px) {.main-section {-ms-flex:0 0 65%;flex:0 0 65%;max-width:65%}}
+
+    @media (min-width: 1024px) {.a26 {font-size:var(--font-size);line-height:var(--line-height)}}
 </style>
 {{end}}
