Replace PostModel and CategoryModel with Store. Simplify access to Posts and Categories. Calculate related posts for the Post detail page.

--- a/assets/templates/error.html
+++ b/assets/templates/error.html
@@ -30,7 +30,7 @@
 
     {{if .LatestPosts}}
         <!-- Latest Articles -->
-        <hr class="my-12">
+        <hr class="my-12 pb-5">
         {{template "post-grid" .LatestPosts}}
     {{end}}
 
