--- a/assets/templates/sitemap.html
+++ b/assets/templates/sitemap.html
@@ -7,7 +7,7 @@
         <h1 class="font-bold text-3xl text-black mb-3">{{.Heading}}</h1>
 
         {{range .Posts}}
-            <div class="w-full flex items-center justify-between border-b border-slate-100">
+            <div class="w-full flex items-center justify-between">
 
                 <p class="w-9/12">
                     <a style="font-size: 1.0625rem;" class="link font-medium" href="{{.Route}}">{{.Heading}}</a>
