--- a/assets/templates/z-head.html
+++ b/assets/templates/z-head.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/x-icon" href="/media/favicon.png">
+    <link rel="icon" type="image/x-icon" href="/media/favicon.webp">
 
     {{if .AppDebug}}
         <script src="https://cdn.tailwindcss.com"></script>
